fixed contact me info wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,12 +6,13 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #eceff1;
   line-height: 1.3;
+  max-width: 100%;
 }
 
 body {
   background-color: #000000;
   padding-bottom: 2%;
-  width: auto;
+  width: 100vw;
 }
 
 a {
@@ -175,8 +176,13 @@ h2 {
   }
   .contact {
     flex-direction: column;
+    text-align: center;
+    flex-wrap: wrap;
   }
-  .contact ul li {
-    flex-basis: 100%;
+  .contact ul {
+    flex-direction: column;
+  }
+  .contact ul li a{
+    font-size: 20px;
   }
 }
